--- a/public/app/main/main.html
+++ b/public/app/main/main.html
@@ -1,1 +1,1 @@
-<div class="container"><div class="row"><div class="col-md-6"><div ng-include="'/partials/main/featured-cards'"></div></div><div class="col-md-6"><div ng-include="'/partials/main/new-cards'"></div></div></div></div>
+<div class="container"><div class="row"><img src="/images/CardCollection.png" class="col-md-4 col-md-offset-2"/><img src="/images/CollectionAdder.png" class="col-md-4"/></div></div>
